[feat] : 나만의 갤러리 부제 구성 및 사진 배치

--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
         </section>
 
         <section>
+          <h3 class="subtitle">나만의 갤러리</h3>
+          <h4>[부제] : 나의 행복의 순간들</h4>
+          <div class="my-photo">
+            <div>
+              <img src="./images/img1.jpeg" alt="img1" />
+              <img src="./images/img2.jpeg" alt="img2" />
+              <img src="./images/img3.jpeg" alt="img3" />
+            </div>
+            <div>
+              <img src="./images/img4.jpeg" alt="img4" />
+              <img src="./images/img5.jpeg" alt="img5" />
+              <img src="./images/img6.jpeg" alt="img6" />
+            </div>
+            <div>
+              <img src="./images/img7.jpeg" alt="img7" />
+              <img src="./images/img8.jpeg" alt="img8" />
+              <img src="./images/img9.jpeg" alt="img9" />
+            </div>
+          </div>
+        </section>
+
+        <section>
           <h3 class="subtitle">나를 울린 인생 작품</h3>
           <article>
             <h4>인생 영화</h4>
