[feat] :  나를 울린 작품 최소 2가지를 소개한다.

--- a/index.html
+++ b/index.html
@@ -41,40 +41,70 @@
           <h4>[부제] : 나의 행복의 순간들</h4>
           <div class="my-photo">
             <div>
-              <img src="./images/img1.jpeg" alt="img1" />
-              <img src="./images/img2.jpeg" alt="img2" />
-              <img src="./images/img3.jpeg" alt="img3" />
+              <img src="./images/gallery/img1.jpeg" alt="img1" />
+              <img src="./images/gallery/img2.jpeg" alt="img2" />
+              <img src="./images/gallery/img3.jpeg" alt="img3" />
             </div>
             <div>
-              <img src="./images/img4.jpeg" alt="img4" />
-              <img src="./images/img5.jpeg" alt="img5" />
-              <img src="./images/img6.jpeg" alt="img6" />
+              <img src="./images/gallery/img4.jpeg" alt="img4" />
+              <img src="./images/gallery/img5.jpeg" alt="img5" />
+              <img src="./images/gallery/img6.jpeg" alt="img6" />
             </div>
             <div>
-              <img src="./images/img7.jpeg" alt="img7" />
-              <img src="./images/img8.jpeg" alt="img8" />
-              <img src="./images/img9.jpeg" alt="img9" />
+              <img src="./images/gallery/img7.jpeg" alt="img7" />
+              <img src="./images/gallery/img8.jpeg" alt="img8" />
+              <img src="./images/gallery/img9.jpeg" alt="img9" />
             </div>
           </div>
         </section>
 
         <section>
           <h3 class="subtitle">나를 울린 인생 작품</h3>
-          <article>
+          <article class="favoriteArt">
             <h4>인생 영화</h4>
             <div class="thumbnail">
               <img
-                src="https://image.tmdb.org/t/p/w1280/u8ffl7CRAS12KA8eQEtkLuHg8Fm.jpg"
+                src="./images/favoriteArt/weddingMovie.jpeg"
                 width="200"
-                alt="그래비티 영화 포스터"
+                alt="너의 결혼식"
               />
             </div>
             <p>
-              알폰소 쿠아론 감독이 연출하고 샌드라 불럭이 주연으로 출연하는 영화
-              「그래비티」는 우주 정거장에서 임무 수행 중 고립된 한 우주인의
-              생존과 귀환을 그린 작품이다. 대학생 시절 처음 본 이 영화는 당시엔
-              그저 지루한 우주 영화였다. 그런데 이 영화를 다시 보니, 마치 내
-              미래를 미리 보여준 복선과도 같다는 점을 깨달았다.
+              첫사랑의 설렘과 아픔을 담은 이야기를 그린 영화로, 한 남자가 오랜
+              시간 짝사랑했던 여자의 결혼식을 바라보며 지난 사랑을 회상하는 감성
+              멜로 영화. 닿을 듯 닿지 않을 듯 아슬아슬한 그 감정선과 마지막에
+              사랑하는 여자를 보내주며 결혼식을 바라보는 남주인공의 장면에서
+              정말 표현할 수 없는 많은 감정들이 순간적으로 이입이 되어서 울게
+              되었던 것 같다.
+            </p>
+          </article>
+          <br />
+          <article class="favoriteArt">
+            <h4>인생 노래</h4>
+            <div class="thumbnail">
+              <img
+                src="./images/favoriteArt/oneWay.jpeg"
+                width="200"
+                alt="직항"
+              />
+            </div>
+            <p>
+              빅나티의 "직항" 이라는 노래이다. 노래 가사 속에서 나의 고민을
+              그대로 옮겨 놓은 듯한 표현을 많이 찾아서 굉장히 위로를 받았었다.
+              <br />
+              예시로 가사중에 "그럼 난 이 길(내꿈)에 전부를 걸게 넌 뭘 걸래?"
+              라는 가사가 있다. 노래를 들을 당시, 꿈에 대한 목표를 잃어서 조금은
+              무서웠고, 열정을 잃어서 더욱 사람에게 기대려 했던 시기가 있었다.
+              지금 내가 걸 수 있는 전부는 하나님 뿐인데도 내가 하나님마저 놓치고
+              있다는 생각이 들었어서 하나님을 향한 마음과 내가 하고 싶은 일에
+              대한 열망이 조금씩 멀어진다는 생각이 들어 무서웠었다.
+              <br />
+              "작업이 막혀도 막 하지 않기로 해. 일단 시도해, 그리고 기도해" 라는
+              가사에서도 나의 이야기를 읽을 수 있었다. 내가 무슨 일을 하던
+              하나님께 감사할 수 있는 일이였으면 좋겠다는 생각을 했다. 그리고 그
+              일이 내가 사랑하는 일이였으면 하는 바램이 있다. 나는 그저 내가 할
+              수 있는 최선을 다할테니 그 속에서 방향을 알려주셨으면 하는
+              마음으로 기도를 했다.
             </p>
           </article>
         </section>
