[faet] : 항목을 클릭하면 페이지 내 적절한 위치로 이동

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <main>
         <h2 class="title">캉골</h2>
         <hr />
-        <section>
+        <section id="about">
           <h3 class="subtitle">자기소개</h3>
           <p>
             안녕하세요. 저는 어디서든 배우는 것을 찾고자 하는 캉골입니다. 어릴때
@@ -36,7 +36,7 @@
           </p>
         </section>
 
-        <section>
+        <section id="gallery">
           <h3 class="subtitle">나만의 갤러리</h3>
           <h4>[부제] : 나의 행복의 순간들</h4>
           <div class="my-photo">
@@ -58,7 +58,7 @@
           </div>
         </section>
 
-        <section>
+        <section id="favoriteArt">
           <h3 class="subtitle">나를 울린 인생 작품</h3>
           <article class="favoriteArt">
             <h4>인생 영화</h4>
@@ -109,7 +109,7 @@
           </article>
         </section>
 
-        <section>
+        <section id="comment">
           <div class="comment-writing-container">
             <form>
               <fieldset>
@@ -195,16 +195,16 @@
           <h2>Contents</h2>
           <ol class="contents">
             <li>
-              <a href="#">자기소개</a>
+              <a href="#about">자기소개</a>
             </li>
             <li>
-              <a href="#">나만의 갤러리</a>
+              <a href="#gallery">나만의 갤러리</a>
             </li>
             <li>
-              <a href="#">나를 울린 인생 작품</a>
+              <a href="#favoriteArt">나를 울린 인생 작품</a>
             </li>
             <li>
-              <a href="#">감상평</a>
+              <a href="#comment">감상평</a>
             </li>
           </ol>
         </nav>
