--- a/index.html
+++ b/index.html
@@ -112,12 +112,16 @@
         <section id="comment">
           <div class="comment-writing-container">
             <form>
-              <fieldset>
-                <legend>댓글 쓰기</legend>
-                <textarea
-                  placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
-                ></textarea>
-              </fieldset>
+              <img
+                src="./images/comment-author-icon.png"
+                alt="사용자 프로필 이미지"
+              />
+              <input
+                placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
+                type="text"
+              />
+              <button type="reset">취소</button>
+              <button type="button">등록</button>
             </form>
           </div>
           <ul class="comment-list">
